--- a/PGB meeting minutes/2021-12-08.md
+++ b/PGB meeting minutes/2021-12-08.md
@@ -1,4 +1,4 @@
-# OriginBX Open Project PGB minutes (draft)
+# OriginBX Open Project PGB minutes 
 
 ## Date: 8 December 2021
 **Present:** Todd R. Smith (KYG Trade), Srinivasan Sriram (Skuchain, Inc),  Brian Staples (Origin Experts Group), Elizabeth Connell (Thomson Reuters). 
