--- a/PGB meeting minutes/2021-11-15.md
+++ b/PGB meeting minutes/2021-11-15.md
@@ -1,4 +1,4 @@
-# OriginBX Open Project PGB minutes (draft)
+# OriginBX Open Project PGB minutes 
 
 ## Date: 10 November 2021
 **Present:** Todd R. Smith (KYG Trade), Oswald Kuyler (International Chamber of Commerce), Ken Montgomery (CompTIA), Ben Stiling (Amazon), Srinivasan Sriram (Skuchain, Inc), Brian Staples (Origin Experts Group), Thomas Fahey (Accenture)
