Update and rename 2023-02-08-draft.md to 2023-02-08.md
removes draft status

--- a/PGB meeting minutes/2023-02-08.md
+++ b/PGB meeting minutes/2023-02-08.md
@@ -1,6 +1,6 @@
-# OriginBX Open Project PGB minutes – DRAFT
+# OriginBX Open Project PGB minutes 
 
-## Date: 11 January 2023
+## Date: 8 February 2023
 
 **Present:** Todd R. Smith (KYG Trade), Ken Montgomery (CompTIA), Linda Cheung (Intel), Yuichiro Yoshinari (Mitsubishi Corp), Thomas Fahey (Accenture), 
 
